--- a/Ecommerce Auth/Client/src/Styles/Home.css
+++ b/Ecommerce Auth/Client/src/Styles/Home.css
@@ -71,6 +71,9 @@
     border-color: #fff;
 }
 
+.categoryLists svg {
+    height: 1.5rem;
+}
 .categoryContainer .controls {
     margin: 4rem auto;
 }
